--- a/style.css
+++ b/style.css
@@ -155,3 +155,20 @@ ul{
 ul li a{
     text-decoration: none;
 }
+
+input {
+    width: 100%;
+    padding: 5px 20px;
+    background-color: white;
+    outline: 0;
+    border: 2px solid gray;
+    border-radius: 8px;
+}
+textarea {
+    width: 100%;
+    padding: 5px 20px;
+    background-color: white;
+    outline: 0;
+    border: 2px solid gray;
+    border-radius: 8px;
+}
